--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<!-- groupId>com.vldocking</groupId -->
 	<groupId>org.bidib.jbidib.com.vldocking</groupId>
 	<artifactId>vldocking</artifactId>
-	<version>3.0.11</version>
+	<version>3.0.12-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<url>https://github.com/akuhtz/vldocking.git</url>
 
